<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:background="#fff"
    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/matusetrans_actualstaskid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matusetrans_actualstaskid"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/matusetrans_actualstaskid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/matusetrans_actualstaskid_title"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/matusetrans_itemnum_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/matusetrans_actualstaskid_title"
                android:layout_marginTop="5dp"
                android:text="@string/matusetrans_itemnum"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/matusetrans_itemnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/matusetrans_actualstaskid"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/matusetrans_itemnum_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/matusetrans_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/matusetrans_itemnum_title"
                android:layout_marginTop="5dp"
                android:text="@string/matusetrans_description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/matusetrans_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/matusetrans_itemnum"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/matusetrans_description_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </RelativeLayout>

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop" />
    </RelativeLayout>

</android.support.v7.widget.CardView>