<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:background="#fff"
    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/item_num_text"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/asset_wonum_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_wonum"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/asset_wonum_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/asset_wonum_title"
                android:hint="@string/have_not_data"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLines="1"/>
            <TextView
                android:id="@+id/asset_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_wonum_title"
                android:text="@string/asset_description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/asset_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_wonum_text"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/asset_description_title"
                android:hint="@string/have_not_data"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLines="1"/>


            <TextView
                android:id="@+id/asset_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_description_title"
                android:layout_marginTop="5dp"
                android:text="@string/asset_status"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/asset_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_description_text"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/asset_status_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/have_not_data"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLines="1" />
            <TextView
                android:id="@+id/asset_statusdate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_status_title"
                android:layout_marginTop="5dp"
                android:text="@string/asset_statusdate"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/asset_statusdate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_status_text"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/asset_statusdate_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/have_not_data"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLines="1" />

            <TextView
                android:id="@+id/asset_actstart_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_statusdate_title"
                android:layout_marginTop="5dp"
                android:text="@string/asset_actstart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/asset_actstart_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_statusdate_text"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/asset_actstart_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/have_not_data"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLines="1" />

            <TextView
                android:id="@+id/asset_actfinish_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_actstart_title"
                android:layout_marginTop="5dp"
                android:text="@string/asset_actfinish"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/asset_actfinish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_actstart_text"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/asset_actfinish_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/have_not_data"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLines="1" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop" />
    </RelativeLayout>

</android.support.v7.widget.CardView>